--- a/scripts/auto-cpufreq-gtk.desktop
+++ b/scripts/auto-cpufreq-gtk.desktop
@@ -4,5 +4,5 @@ Exec=auto-cpufreq-gtk
 Type=Application
 Terminal=false
 Icon=auto-cpufreq
-StartupWMClass=app.py
+StartupWMClass=auto-cpufreq-gtk
 Categories=System;
