--- a/auto-cpufreq/Cargo.toml
+++ b/auto-cpufreq/Cargo.toml
@@ -53,28 +53,36 @@ ksni = "0.2"
 default = []
 gui = ["gtk", "gdk", "gdk-pixbuf", "glib", "gio"]
 
-[profile.release]
-opt-level = 3
-lto = "fat"                # Full Link-Time Optimization
-codegen-units = 1          # Better optimization (slower compile)
-strip = true               # Strip symbols from binary
-panic = "abort"            # Smaller binary, faster panics
-overflow-checks = false    # Disable overflow checks in release
 
-[profile.release-size]
-inherits = "release"
-opt-level = "z"            # Optimize for size
-lto = true
-codegen-units = 1
-strip = true
 
 [profile.dev]
 opt-level = 0
 debug = true
 overflow-checks = true
+codegen-units = 256       
 
-[profile.release.package."*"]
+[profile.release]
+opt-level = 3              
+lto = "fat"              
+codegen-units = 1       
+strip = true             
+panic = "unwind"          
+overflow-checks = true     
+debug = false             
+
+[profile.release-size]
+inherits = "release"
+opt-level = "z"           
+lto = true
+codegen-units = 1
+strip = true
+panic = "abort"            
+overflow-checks = true    
+
+[profile.release.package.sysinfo]
 opt-level = 3
 codegen-units = 1
 
+[profile.release.package.nix]
+opt-level = 3
 
